--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,7 @@
 <header class="site-header">
 
+    <link rel="shortcut icon" type="image/png" href="/favicon.ico">
+
     <div class="wrapper">
         {%- assign default_paths = site.pages | map: "path" -%}
         {%- assign page_paths = site.header_pages | default: default_paths -%}
@@ -19,4 +21,5 @@
         </nav>
         {%- endif -%}
     </div>
+
 </header>
